- always display 6 rows in the calendar to prevent close controls from jumping up and down - display previous and next month days in empty cells
git-svn-id: file:///Users/gauthierm/svnrepo/swat/trunk@12950 94490950-a86c-4493-9ccb-530f72933e47

--- a/www/styles/swat-calendar.css
+++ b/www/styles/swat-calendar.css
@@ -104,6 +104,8 @@ th.swat-calendar-header {
 	padding: 2px;
 	border: 1px #ccc solid;
 	background: #eee;
+	text-align: center;
+	color: #888;
 }
 
 td.swat-calendar-close-controls {
